--- a/2021-11-19-ArraysII/ArraysII.org
+++ b/2021-11-19-ArraysII/ArraysII.org
@@ -44,6 +44,10 @@ int main(int argc, char **argv)
 #+RESULTS:
 : -58.1112
 
+#+begin_export html
+<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=%23include%20%3Ciostream%3E%0A%0Aint%20main%28int%20argc,%20char%20**argv%29%0A%7B%0A%20%20%20%20//%20double%20x1%20%3D%209.87,%20y1%20%3D%20-0.65,%20z1%20%3D%207.65432%3B%0A%20%20%20%20//%20double%20x2%20%3D%20-5.432,%20y2%20%3D%20-0.6598876,%20z2%20%3D%20-0.64359%3B%0A%20%20%20%20//std%3A%3Acout%20%3C%3C%20x1*x2%20%2B%20y1*y2%20%2B%20z1*z2%20%3C%3C%20std%3A%3Aendl%3B%0A%0A%20%20%20%20//%20memoria%20%3D%20stack%28estatico%29%20%2B%20heap%28dinamica%29%0A%0A%20%20%20%20//%20primitive%20arrays%20//limited%20by%20stack%20size%0A%20%20%20%20int%20N%20%3D%2010000%3B%0A%20%20%20%20double%20v1%5BN%5D%7B9.87,%20-0.65,%207.65432%7D,%20v2%5BN%5D%7B-5.432,%20-0.6598876,%20-0.64359%7D%3B%0A%20%20%20%20double%20dot%20%3D%200%3B%0A%20%20%20%20for%20%28int%20ii%20%3D%200%3B%20ii%20%3C%20N%3B%20ii%2B%2B%29%20%7B%0A%20%20%20%20%20%20%20%20dot%20%2B%3D%20v1%5Bii%5D*v2%5Bii%5D%3B%0A%20%20%20%20%7D%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20dot%20%3C%3C%20std%3A%3Aendl%3B%0A%0A%20%20%20%20return%200%3B%0A%7D&codeDivHeight=400&codeDivWidth=350&curInstr=0&origin=opt-frontend.js&py=cpp_g%2B%2B9.3.0&rawInputLstJSON=%5B%5D"> </iframe>
+#+end_export
+
 * TODO Pointers basic [/]
 Goal: to learn what a pointer is (a variable that stores a memory address) and
 its relationship with primitive arrays
@@ -72,6 +76,12 @@ int main(int argc, char *argv[]) {
 | ptr   |              : | 0x7ffee570c398 |
 | *ptr: |       0.987766 |                |
 | &ptr: | 0x7ffee570c390 |                |
+
+
+C++/Python tutor visualization
+#+begin_export html
+<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=%23include%20%3Ciostream%3E%0A%0Aint%20main%28int%20argc,%20char%20*argv%5B%5D%29%20%7B%0A%20%20%20%20double%20val%20%3D%200.987766%3B%0A%20%20%20%20double%20*%20ptr%20%3D%20nullptr%3B%20//%20pointer.%20Only%20stores%20memory%20addresses%0A%20%20%20%20ptr%20%3D%20%26val%3B%20//%20ptr%20stores%20x%20memory%20address%0A%20%20%20%20//ptr%20%3D%20x%3B%20//%20error,%20cannot%20store%20common%20values%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20%22val%20%3A%20%22%20%3C%3C%20val%20%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20%22%26val%3A%20%22%20%3C%3C%20%26val%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20%22ptr%20%3A%20%22%20%3C%3C%20ptr%20%20%3C%3C%20std%3A%3Aendl%3B%20//%20prints%20val%20address%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20%22*ptr%3A%20%22%20%3C%3C%20*ptr%20%3C%3C%20std%3A%3Aendl%3B%20//%20prints%20val%20VALUE%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20%22%26ptr%3A%20%22%20%3C%3C%20%26ptr%20%3C%3C%20std%3A%3Aendl%3B%20//%20prints%20ptr%20address%0A%20%20%20%20%0A%20%20%20%20return%200%3B%0A%7D%0A&codeDivHeight=400&codeDivWidth=350&curInstr=0&origin=opt-frontend.js&py=cpp_g%2B%2B9.3.0&rawInputLstJSON=%5B%5D"> </iframe>
+#+end_export
 
 - [ ] Modify the previous code to include a pointer
   #+begin_src cpp :tangle basic_array_pointer.cpp
@@ -112,6 +122,12 @@ int main(int argc, char *argv[]) {
   |          -0.65 |
   |        7.65432 |
 
+
+Python/c++ tutor visualization
+#+begin_export html
+<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=//%20Computing%20dot%20product%0A%20%20%23include%20%3Ciostream%3E%0A%0A%20%20int%20main%28int%20argc,%20char%20**argv%29%0A%20%20%7B%0A%20%20%20%20%20%20//%20double%20x1%20%3D%209.87,%20y1%20%3D%20-0.65,%20z1%20%3D%207.65432%3B%0A%20%20%20%20%20%20//%20double%20x2%20%3D%20-5.432,%20y2%20%3D%20-0.6598876,%20z2%20%3D%20-0.64359%3B%0A%20%20%20%20%20%20//std%3A%3Acout%20%3C%3C%20x1*x2%20%2B%20y1*y2%20%2B%20z1*z2%20%3C%3C%20std%3A%3Aendl%3B%0A%0A%20%20%20%20%20%20//%20memoria%20%3D%20stack%28estatico%29%20%2B%20heap%28dinamica%29%0A%0A%20%20%20%20%20%20//%20primitive%20arrays%20//limited%20by%20stack%20size%0A%20%20%20%20%20%20int%20N%20%3D%2010000%3B%0A%20%20%20%20%20%20double%20v1%5BN%5D%7B9.87,%20-0.65,%207.65432%7D%3B%0A%20%20%20%20%20%20double%20*%20ptr%20%3D%20nullptr%3B%0A%20%20%20%20%20%20ptr%20%3D%20%26v1%5B0%5D%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20v1%5B0%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20%26v1%5B0%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20%26v1%5B1%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20ptr%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20ptr%5B0%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20ptr%5B1%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%20%20std%3A%3Acout%20%3C%3C%20*%28ptr%20%2B%202%29%20%3C%3C%20std%3A%3Aendl%3B%0A%0A%20%20%20%20%20%20return%200%3B%0A%20%20%7D&codeDivHeight=400&codeDivWidth=350&curInstr=0&origin=opt-frontend.js&py=cpp_g%2B%2B9.3.0&rawInputLstJSON=%5B%5D"> </iframe>
+#+end_export
+
 * TODO Passing arrays to functions [0/3]
 Goal: create functions and pass arrays by reference.
 - [ ] Let's create a function that receives our vectors and returns their dot
@@ -145,3 +161,8 @@ int main(int argc, char *argv[]) {
 
   #+RESULTS:
   : 0.999022
+
+  Python/c++ tutor visualization
+  #+begin_export html
+<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=%23include%20%3Ciostream%3E%0A%0Aint%20main%28int%20argc,%20char%20*argv%5B%5D%29%20%7B%0A%20%20%20%20int%20N%20%3D%20std%3A%3Aatoi%28argv%5B1%5D%29%3B%0A%20%20%20%20double%20*%20data%20%3D%20nullptr%3B%0A%20%20%20%20data%20%3D%20new%20double%20%5BN%5D%3B%20//%20ask%20for%20memory%0A%20%20%20%20for%28int%20ii%20%3D%200%3B%20ii%20%3C%20N%3B%20%2B%2Bii%29%20%7B%0A%20%20%20%20%20%20%20%20data%5Bii%5D%20%3D%202*ii/%282*ii%20%2B%201.0%29%3B%0A%20%20%20%20%7D%0A%20%20%20%20std%3A%3Acout%20%3C%3C%20data%5BN/2%5D%20%3C%3C%20std%3A%3Aendl%3B%0A%20%20%20%20%0A%20%20%20%20delete%20%5B%5D%20data%3B%20//%20return%20memory%0A%20%20%20%20%0A%20%20%20%20return%200%3B%0A%7D&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=cpp_g%2B%2B9.3.0&rawInputLstJSON=%5B%5D&textReferences=false"> </iframe>
+  #+end_export
